Layout and preload fixes
Minor margin adjustment to hamburger menu. Previous size was causing
animation to look off.
Removed preload background image causing warning in console.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -342,7 +342,7 @@ article,
     height: 35px;
     width: 35px;
   }  #toggle:checked + .hamburger .top {
-    margin-top: 10.5px;    -webkit-transform: rotate(-45deg);    transform: rotate(-45deg);
+    margin-top: 11px;    -webkit-transform: rotate(-45deg);    transform: rotate(-45deg);
   }  #toggle:checked + .hamburger .meat {
     margin-top: 2px;    -webkit-transform: rotate(45deg);    transform: rotate(45deg);  }  #toggle:checked + .hamburger .bottom {    -webkit-transform: scale(0);    transform: scale(0);  }  #toggle:checked ~ #menu {    height: 186px;  }
 }
